# ddc2scraper

./: .env.example  .gitignore  README.md  SECURITY.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  scrape.yml
dashboard/: app.js  data.json  index.html  style.css
data/: arctic_opportunities.json  opportunities.json  run_log.json
scraper/: __init__.py  config.py  dedup.py  llm_filter.py  main.py  models.py
scraper/collectors/: __init__.py  afwerx.py  army_apps_lab.py  base.py  darpa.py  diu.py  dsip.py  erdcwerx.py  grants_gov.py  navalx.py  navy_sbir.py  sam_gov.py  sbir_gov.py  sofwerx.py  spacewerx.py
scraper/utils/: http_client.py  playwright_helpers.py
tests/: __init__.py  test_dedup.py  test_llm_filter.py  test_models.py
